syntax = "proto3";
package scstatepb;

message State {
    map<string, string> state = 1;
}

message ScState {
    map<string, State> states = 1;
}